# tqh

./: .gitignore  README.md
Client/tqhApp/: README_download_icons.txt
Client/tqhApp/app/: build.gradle
Client/tqhApp/app/src/androidTest/java/com/farrutaps/tqhapp/: ApplicationTest.java
Client/tqhApp/app/src/main/: AndroidManifest.xml
Client/tqhApp/app/src/main/java/com/farrutaps/tqhapp/: MainActivity.java
Client/tqhApp/app/src/main/java/com/farrutaps/tqhapp/Adapters/: MyStatusAdapter.java  StatusAdapter.java
Client/tqhApp/app/src/main/java/com/farrutaps/tqhapp/client/: AsyncConnection.java  Connection.java  HTTP_1_0_Response.java  PayloadItem.java  WebServices.java
Client/tqhApp/app/src/main/java/com/farrutaps/tqhapp/controller/: Controller.java  Parameters.java
Client/tqhApp/app/src/main/java/com/farrutaps/tqhapp/model/: Options.java  Status.java  User.java
Client/tqhApp/app/src/main/java/com/farrutaps/tqhapp/view/: AppCompatPreferenceActivity.java  MainActivity.java  NumberPickerDialog.java  SettingsActivity.java  StartActivity.java  UserPickerDialog.java
Client/tqhApp/app/src/main/res/drawable/: bg_layout.xml  ic_account_circle.xml  ic_face.xml  ic_home.xml  ic_home_dark.xml  ic_people.xml  ic_publish.xml  ic_refresh.xml  ic_schedule.xml  led_off.xml  led_on.xml
Client/tqhApp/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_main.xml  fragment_user.xml  item_my_status.xml  item_status.xml
Client/tqhApp/app/src/main/res/menu/: menu_main.xml
Client/tqhApp/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
Client/tqhApp/app/src/test/java/com/farrutaps/tqhapp/: ExampleUnitTest.java
Server/: CMakeLists.txt  main.cpp
Server/connection/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
Server/controller/: UpdateListener.hpp  controller.cpp  controller.hpp  update_listener.hpp  user.cpp  user.hpp
Server/controller/rest_endpoints/: data_update_handler.cpp  data_update_handler.hpp  publish_info.cpp  publish_info.hpp
Server/esteful/: Gpio.cpp  Gpio.hpp  Led.cpp  Led.hpp
Server/led_board/: Gpio.cpp  Gpio.hpp  Led.cpp  Led.hpp  LedController.cpp  LedController.hpp  gpio.cpp  gpio.hpp  led.cpp  led.hpp  led_controller.cpp  led_controller.hpp
Server/utils/: json.hpp
server/: CMakeLists.txt  main.cpp
server/connection/: connection.cpp  connection.hpp  connection_manager.hpp  header.hpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  rest_endpoint_handler.hpp  server.cpp  server.hpp
server/connection/rest_endpoints/: data_update_handler.cpp  data_update_handler.hpp  publish_info.hpp  rest_endpoint_handler.hpp
server/controller/: controller.cpp  controller.hpp  user.hpp
server/controller/rest_endpoints/: data_update_handler.cpp  data_update_handler.hpp  publish_info.cpp  publish_info.hpp
